bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
  return ((90<n<110)||(190<n<210)) 
                ^NearHundred:2: error: type mismatch;
 found   : Int(210)
 required: Boolean
  return ((90<n<110)||(190<n<210)) 
                             ^